--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-spring": "^9.0.0-beta.34",
     "styled-components": "^5.0.0-rc.1"
   },
   "devDependencies": {
