--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
+    "lint:css": "stylelint './src/**/*.js'",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
     "storybook": "NODE_ENV=production start-storybook -p 6006 -s public",
     "build-storybook": "yarn build; NODE_PATH=src/ NODE_ENV=production build-storybook -s public --quiet"
@@ -53,29 +54,34 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-spring": "^9.0.0-beta.34",
-    "styled-components": "^5.0.0-rc.1"
+    "styled-components": "^5.0.0",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
-    "@storybook/react": "^5.2.8",
+    "@storybook/react": "^5.3.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
-    "babel-preset-gatsby": "^0.2.26",
+    "babel-preset-gatsby": "^0.2.27",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.2.34",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "husky": "^3.1.0",
+    "gatsby-plugin-manifest": "^2.2.37",
+    "gatsby-plugin-styled-components": "^3.1.17",
+    "husky": "^4.0.9",
     "lint-staged": "^9.5.0",
     "postcss-preset-env": "^6.7.0",
     "pretty-quick": "^2.0.1",
+    "styled-shortcuts": "^2.1.2",
+    "stylelint": "^13.0.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
     "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.1.4"
   }
