--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && lint-staged"
+      "pre-commit": "pretty-quick --staged && lint-staged",
+      "pre-push": ""
     }
   },
   "lint-staged": {
@@ -74,7 +75,7 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.37",
     "gatsby-plugin-styled-components": "^3.1.17",
-    "husky": "^4.0.9",
+    "husky": "3.1.0",
     "lint-staged": "^9.5.0",
     "postcss-preset-env": "^6.7.0",
     "pretty-quick": "^2.0.1",
