--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^9.0.0-beta.34",
     "styled-components": "^5.0.0",
+    "styled-is": "^1.3.0",
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
