--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "build-storybook": "yarn build; NODE_PATH=src/ NODE_ENV=production build-storybook -s public --quiet"
   },
   "dependencies": {
-    "gatsby": "^2.18.17",
-    "gatsby-plugin-postcss": "^2.1.18",
-    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby": "^2.19.3",
+    "gatsby-plugin-postcss": "^2.1.19",
+    "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-resolve-src": "^2.0.0",
+    "polished": "^3.4.2",
     "postcss-import": "^12.0.1",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
@@ -60,22 +61,23 @@
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.3",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
-    "@storybook/react": "^5.3.3",
+    "@storybook/react": "^5.3.8",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-gatsby": "^0.2.27",
+    "core-js": "2.6.10",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.2.37",
-    "gatsby-plugin-styled-components": "^3.1.17",
+    "gatsby-plugin-manifest": "^2.2.38",
+    "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "3.1.0",
     "lint-staged": "^9.5.0",
     "postcss-preset-env": "^6.7.0",
