--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.38",
+    "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "3.1.0",
     "lint-staged": "^9.5.0",
