--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-offline": "^3.0.34",
     "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "3.1.0",
     "lint-staged": "^9.5.0",
