--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dennis.vash",
-  "description": "Dennis Vash Web Developer",
+  "name": "dennisvash.dev",
+  "description": "Dennis Vash Personal Website",
   "version": "1.0.0",
   "author": "Dennis Vash <dennisvash@gmail.com>",
   "license": "MIT",
@@ -14,10 +14,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/denvash/gatsby-styled-tailwind-storybook-starter"
+    "url": "https://github.com/denvash/dennisvash.dev"
   },
   "bugs": {
-    "url": "https://github.com/denvash/gatsby-styled-tailwind-storybook-starter/issues"
+    "url": "https://github.com/denvash/dennisvash.dev/issues"
   },
   "husky": {
     "hooks": {
