--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.38",
+    "gatsby-plugin-netlify": "^2.1.32",
     "gatsby-plugin-offline": "^3.0.34",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-robots-txt": "^1.5.0",
