--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^9.0.0-beta.34",
     "styled-components": "^5.0.0",
-    "styled-is": "^1.3.0",
-    "styled-theming": "^2.2.0",
+    "styled-tools": "^1.7.1",
     "typeface-unica-one": "^0.0.72"
   },
   "devDependencies": {
@@ -93,7 +92,6 @@
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.1.4"
+    "twin.macro": "^1.0.0-alpha.7"
   }
 }
