--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "build-storybook": "yarn build; NODE_PATH=src/ NODE_ENV=production build-storybook -s public --quiet"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.0-beta.0",
     "gatsby": "^2.19.17",
     "gatsby-plugin-postcss": "^2.1.20",
     "gatsby-plugin-react-helmet": "^3.1.22",
@@ -55,6 +56,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.0",
     "react-spring": "^9.0.0-beta.34",
     "styled-components": "^5.0.0",
     "styled-tools": "^1.7.1",
