--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,7 +14,9 @@
       "@hooks": ["src/hooks/index"],
       "@constants": ["src/constants/index"],
       "@queries": ["src/queries/index"],
-      "@store": ["src/store/index"]
+      "@store": ["src/store/index"],
+      "@reducers": ["src/state/slices/reducers"],
+      "@slices": ["src/state/slices/"]
     }
   }
 }
