--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^7.2.0",
     "react-spring": "^9.0.0-beta.34",
     "redux-logger": "^3.0.6",
+    "reusable": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0",
     "styled-tools": "^1.7.1",
