--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,4 @@
 {
+  "processors": ["stylelint-processor-styled-components"],
   "extends": ["stylelint-config-recommended", "stylelint-config-styled-components"]
 }
