--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "license": "MIT",
   "keywords": [
     "gatsby",
-    "template",
     "tailwind",
     "storybook",
     "styled-components",
@@ -53,6 +52,7 @@
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "react-spring": "^9.0.0-beta.34",
+    "react-table": "^7.0.0",
     "redux-logger": "^3.0.6",
     "reusable": "^1.0.0",
     "socket.io-client": "^2.3.0",
@@ -61,10 +61,6 @@
     "typeface-unica-one": "^0.0.72"
   },
   "devDependencies": {
-    "gatsby-plugin-postcss": "^2.1.20",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-resolve-src": "^2.0.0",
-    "postcss-import": "^12.0.1",
     "@babel/core": "^7.8.3",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
@@ -82,20 +78,23 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.38",
-    "gatsby-plugin-netlify": "^2.1.32",
     "gatsby-plugin-offline": "^3.0.34",
+    "gatsby-plugin-postcss": "^2.1.20",
     "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "3.1.0",
     "lint-staged": "^9.5.0",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "pretty-quick": "^2.0.1",
-    "styled-shortcuts": "^2.1.2",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "twin.macro": "^1.0.0-alpha.7"
   }
 }
