--- a/package.json
+++ b/package.json
@@ -52,13 +52,11 @@
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "react-spring": "^9.0.0-beta.34",
-    "react-table": "^7.0.0",
     "redux-logger": "^3.0.6",
     "reusable": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0",
-    "styled-tools": "^1.7.1",
-    "typeface-unica-one": "^0.0.72"
+    "styled-tools": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
