--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.0-beta.0",
+    "framer-motion": "^1.9.1",
     "gatsby": "^2.19.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -57,8 +58,6 @@
     "styled-tools": "^1.7.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "prop-types": "^15.7.2",
     "@babel/core": "^7.8.3",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
@@ -84,7 +83,9 @@
     "lint-staged": "^9.5.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "prop-types": "^15.7.2",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
