--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@reduxjs/toolkit": "^1.3.0-beta.0",
     "framer-motion": "^1.9.1",
     "gatsby": "^2.19.17",
+    "object.fromentries": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
