--- a/package.json
+++ b/package.json
@@ -37,18 +37,19 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "lint:css": "stylelint './src/**/*.js'",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
-    "storybook": "NODE_ENV=production start-storybook -p 6006 -s public",
-    "build-storybook": "yarn build; NODE_PATH=src/ NODE_ENV=production build-storybook -s public --quiet"
+    "storybook": "start-storybook -p 6006 -c .storybook",
+    "build-storybook": "yarn build; NODE_PATH=src/ build-storybook --quiet"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.0-beta.0",
-    "framer-motion": "^1.9.1",
-    "gatsby": "^2.19.17",
+    "framer-motion": "^1.10.0",
+    "gatsby": "^2.20.2",
     "object.fromentries": "^2.0.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
@@ -59,31 +60,28 @@
     "typeface-rajdhani": "^0.0.72"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
+    "core-js": "2.5.7",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
     "@storybook/react": "^5.3.8",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "babel-preset-gatsby": "^0.2.29",
-    "core-js": "2.6.10",
+    "babel-preset-gatsby": "^0.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.2.38",
-    "gatsby-plugin-offline": "^3.0.34",
-    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-manifest": "^2.3.1",
+    "gatsby-plugin-offline": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^3.2.0",
     "gatsby-plugin-resolve-src": "^2.0.0",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-plugin-styled-components": "^3.1.18",
-    "husky": "3.1.0",
-    "lint-staged": "^9.5.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
+    "gatsby-plugin-sitemap": "^2.3.0",
+    "gatsby-plugin-styled-components": "^3.2.0",
+    "husky": "4.2.3",
+    "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
