--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "build-storybook": "yarn build; NODE_PATH=src/ build-storybook --quiet"
   },
   "dependencies": {
+    "@hkube/consts": "^1.0.20",
     "@reduxjs/toolkit": "^1.3.0-beta.0",
     "framer-motion": "^1.10.0",
     "gatsby": "^2.20.2",
@@ -59,7 +60,6 @@
     "typeface-rajdhani": "^0.0.72"
   },
   "devDependencies": {
-    "core-js": "2.5.7",
     "@dennisvash/eslint-config": "^2.2.2",
     "@dennisvash/prettier-config": "^1.0.0",
     "@storybook/react": "^5.3.8",
@@ -67,6 +67,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-gatsby": "^0.3.0",
+    "core-js": "2.5.7",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
