--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@reduxjs/toolkit": "^1.3.0-beta.0",
     "framer-motion": "^1.10.0",
     "gatsby": "^2.20.2",
+    "humanize-duration": "^3.22.0",
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
     "reusable": "^1.0.0",
