--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "jsx": "react",
     "paths": {
-      "@styles": ["src/styles/index"],
-      "@fonts": ["src/fonts/index"],
-      "@components": ["src/components/index"],
-      "@icons": ["src/components/atoms/Icons/index"],
-      "@config": ["src/config/index"],
-      "@images": ["src/images"],
-      "@pages": ["src/pages"],
-      "@utils": ["src/utils/index"],
-      "@hooks": ["src/hooks/index"],
-      "@constants": ["src/constants/index"],
-      "@queries": ["src/queries/index"],
-      "@reducers": ["src/state/store/reducers"],
-      "@actions": ["src/state/store/actions"],
-      "@slices": ["src/state/slices/"]
+      "@styles": ["styles/index"],
+      "@fonts": ["fonts/index"],
+      "@components": ["components/index"],
+      "@icons": ["components/atoms/Icons/index"],
+      "@config": ["config/index"],
+      "@utils": ["utils/index"],
+      "@hooks": ["hooks/index"],
+      "@constants": ["constants/index"],
+      "@queries": ["queries/index"],
+      "@reducers": ["state/store/reducers"],
+      "@actions": ["state/store/actions"],
+      "@slices": ["state/slices/"]
     }
   }
 }
