--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "humanize-duration": "^3.22.0",
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
