--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
   },
   "dependencies": {
     "@hkube/consts": "^1.0.20",
-    "@reduxjs/toolkit": "^1.3.0-beta.0",
-    "framer-motion": "^1.10.0",
-    "gatsby": "^2.20.2",
+    "@reduxjs/toolkit": "^1.3.0",
+    "framer-motion": "^1.10.2",
+    "gatsby": "^2.20.6",
     "humanize-duration": "^3.22.0",
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
@@ -72,7 +72,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "babel-preset-gatsby": "^0.3.0",
+    "babel-preset-gatsby": "^0.3.1",
     "core-js": "2.5.7",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -80,15 +80,15 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.3.1",
-    "gatsby-plugin-offline": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^3.2.0",
+    "gatsby-plugin-manifest": "^2.3.2",
+    "gatsby-plugin-offline": "^3.1.1",
+    "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-resolve-src": "^2.0.0",
-    "gatsby-plugin-sitemap": "^2.3.0",
-    "gatsby-plugin-styled-components": "^3.2.0",
+    "gatsby-plugin-sitemap": "^2.3.1",
+    "gatsby-plugin-styled-components": "^3.2.1",
     "husky": "4.2.3",
-    "lint-staged": "^10.0.8",
-    "prettier": "^2.0.1",
+    "lint-staged": "^10.0.9",
+    "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
     "stylelint": "^13.2.1",
