--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,10 @@
       "@styles": ["styles/index"],
       "@fonts": ["fonts/index"],
       "@components": ["components/index"],
+      "@atoms": ["components/atoms/index"],
+      "@molecules": ["components/molecules/index"],
+      "@organisms": ["components/organisms/index"],
+      "@templates": ["components/templates/index"],
       "@icons": ["components/atoms/Icons/index"],
       "@config": ["config/index"],
       "@utils": ["utils/index"],
