--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "react-tooltip": "^4.1.3",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "redux-logger": "^3.0.6",
