--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@dennisvash/eslint-config": "^3.0.0",
     "@dennisvash/prettier-config": "^2.0.1",
     "@storybook/react": "^5.3.18",
+    "@welldone-software/why-did-you-render": "^4.0.6",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
