[+] Rest + Pipelines slices

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "@hkube/consts": "^1.0.21",
     "@reduxjs/toolkit": "^1.3.2",
+    "axios": "^0.19.2",
+    "file-saver": "^2.0.2",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.9",
     "humanize-duration": "^3.22.0",
