--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lodash.throttle": "^4.1.1",
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
+    "react-circle": "^1.1.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
