--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
   },
   "dependencies": {
     "@hkube/consts": "^1.0.21",
-    "@reduxjs/toolkit": "^1.3.2",
+    "@reduxjs/toolkit": "^1.3.4",
     "axios": "^0.19.2",
+    "beautiful-react-hooks": "^0.23.1",
     "file-saver": "^2.0.2",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.9",
+    "gatsby": "^2.20.22",
     "humanize-duration": "^3.22.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
@@ -58,23 +59,23 @@
     "react-circle": "^1.1.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
-    "reusable": "^1.0.0",
+    "reusable": "^1.0.1",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.0.0",
+    "styled-components": "^5.1.0",
     "styled-tools": "^1.7.1",
     "typeface-rajdhani": "^0.0.72",
-    "vis-network-react": "^1.2.2"
+    "vis-network-react": "^1.2.3"
   },
   "devDependencies": {
     "@dennisvash/eslint-config": "^3.0.0",
     "@dennisvash/prettier-config": "^2.0.1",
     "@storybook/react": "^5.3.18",
-    "@welldone-software/why-did-you-render": "^4.0.6",
+    "@welldone-software/why-did-you-render": "^4.0.8",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -88,18 +89,18 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-react-helmet": "^3.2.2",
     "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-styled-components": "^3.2.1",
-    "husky": "4.2.3",
-    "lint-staged": "^10.1.1",
-    "prettier": "^2.0.2",
+    "husky": "4.2.5",
+    "lint-staged": "^10.1.3",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
-    "stylelint": "^13.2.1",
+    "stylelint": "^13.3.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "twin.macro": "^1.0.0-alpha.8"
+    "twin.macro": "^1.0.0-alpha.9"
   }
 }
