--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
     "react-circle": "^1.1.1",
+    "react-color": "2.17.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
