--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "humanize-duration": "^3.22.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
+    "lodash.set": "^4.3.2",
     "lodash.throttle": "^4.1.1",
     "object.fromentries": "^2.0.2",
     "react": "^16.13.1",
