--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "file-saver": "^2.0.2",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.22",
-    "humanize-duration": "^3.22.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.set": "^4.3.2",
     "lodash.throttle": "^4.1.1",
     "object.fromentries": "^2.0.2",
+    "pretty-ms": "^6.0.1",
     "react": "^16.13.1",
     "react-circle": "^1.1.1",
     "react-color": "2.17.3",
