--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "pretty-ms": "^6.0.1",
     "react": "^16.13.1",
     "react-circle": "^1.1.1",
-    "react-color": "2.17.3",
+    "react-color-slim": "^2.18.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
