--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@hkube/consts": "^1.0.21",
     "@reduxjs/toolkit": "^1.3.5",
+    "ansi-to-react": "^6.0.5",
     "beautiful-react-hooks": "^0.23.1",
     "file-saver": "^2.0.2",
     "framer-motion": "^1.10.3",
