--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "@dennisvash/eslint-config/react",
   "rules": {
+    "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "indent": "off"
   }
