--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
   },
   "dependencies": {
     "@hkube/consts": "^1.0.21",
-    "@reduxjs/toolkit": "^1.3.5",
+    "@reduxjs/toolkit": "^1.3.6",
     "ansi-to-react": "^6.0.5",
-    "beautiful-react-hooks": "^0.23.1",
+    "beautiful-react-hooks": "^0.25.2",
     "file-saver": "^2.0.2",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.21.11",
+    "gatsby": "^2.21.30",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.set": "^4.3.2",
@@ -77,23 +77,23 @@
     "@dennisvash/eslint-config": "^3.0.0",
     "@dennisvash/prettier-config": "^2.0.1",
     "@storybook/react": "^5.3.18",
-    "@welldone-software/why-did-you-render": "^4.1.3",
+    "@welldone-software/why-did-you-render": "^4.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "babel-preset-gatsby": "^0.4.0",
+    "babel-preset-gatsby": "^0.4.2",
     "core-js": "2.5.7",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-manifest": "^2.4.3",
+    "gatsby-plugin-offline": "^3.2.2",
+    "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-resolve-src": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.3.0",
+    "gatsby-plugin-styled-components": "^3.3.1",
     "husky": "4.2.5",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
@@ -103,6 +103,6 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "twin.macro": "^1.0.0-alpha.10"
+    "twin.macro": "^1.0.0"
   }
 }
