--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "devDependencies": {
     "@dennisvash/eslint-config": "^3.0.0",
     "@dennisvash/prettier-config": "^2.0.1",
+    "@storybook/addon-storysource": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "@welldone-software/why-did-you-render": "^4.2.2",
     "babel-eslint": "^10.0.3",
