--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
     "vis-network-react": "1.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-flow": "^7.10.1",
     "@dennisvash/eslint-config": "^3.0.0",
     "@dennisvash/prettier-config": "^2.0.1",
     "@storybook/addon-storysource": "^5.3.19",
@@ -87,6 +90,7 @@
     "@welldone-software/why-did-you-render": "^4.2.2",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-gatsby": "^0.4.2",
     "core-js": "2.5.7",
@@ -95,7 +99,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.2",
+    "flow-bin": "^0.127.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-flow": "^1.3.5",
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
@@ -105,6 +111,7 @@
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "prop-types-extra": "^1.1.1"
   }
 }
