--- a/.flowconfig
+++ b/.flowconfig
@@ -15,7 +15,9 @@ esproposal.optional_chaining=enable
 esproposal.nullish_coalescing=enable
 
 module.name_mapper='@styles' -> '<PROJECT_ROOT>/src/styles/index.js'
+module.name_mapper='@atoms' -> '<PROJECT_ROOT>/src/components/atoms/index.js'
 module.name_mapper='@constants' -> '<PROJECT_ROOT>/src/constants/index.js'
+module.name_mapper='@utils' -> '<PROJECT_ROOT>/src/utils/index.js'
 module.name_mapper='@storybookHelpers' -> '<PROJECT_ROOT>/.storybook/helpers.js'
 
 [strict]
