--- a/.flowconfig
+++ b/.flowconfig
@@ -16,8 +16,11 @@ esproposal.nullish_coalescing=enable
 
 module.name_mapper='@styles' -> '<PROJECT_ROOT>/src/styles/index.js'
 module.name_mapper='@atoms' -> '<PROJECT_ROOT>/src/components/atoms/index.js'
+module.name_mapper='@config' -> '<PROJECT_ROOT>/src/config/index.js'
+module.name_mapper='@hooks' -> '<PROJECT_ROOT>/src/hooks/index.js'
 module.name_mapper='@constants' -> '<PROJECT_ROOT>/src/constants/index.js'
 module.name_mapper='@utils' -> '<PROJECT_ROOT>/src/utils/index.js'
 module.name_mapper='@storybookHelpers' -> '<PROJECT_ROOT>/.storybook/helpers.js'
+module.name_mapper='state' -> '<PROJECT_ROOT>/src/state/index.js'
 
 [strict]
