--- a/.flowconfig
+++ b/.flowconfig
@@ -16,6 +16,9 @@ esproposal.nullish_coalescing=enable
 
 module.name_mapper='@styles' -> '<PROJECT_ROOT>/src/styles/index.js'
 module.name_mapper='@atoms' -> '<PROJECT_ROOT>/src/components/atoms/index.js'
+module.name_mapper='@molecules' -> '<PROJECT_ROOT>/src/components/molecules/index.js'
+module.name_mapper='@organisms' -> '<PROJECT_ROOT>/src/components/organisms/index.js'
+module.name_mapper='@templates' -> '<PROJECT_ROOT>/src/components/templates/index.js'
 module.name_mapper='@config' -> '<PROJECT_ROOT>/src/config/index.js'
 module.name_mapper='@hooks' -> '<PROJECT_ROOT>/src/hooks/index.js'
 module.name_mapper='@constants' -> '<PROJECT_ROOT>/src/constants/index.js'
