--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "styled-tools": "^1.7.1",
     "twin.macro": "^1.2.0",
     "typeface-rajdhani": "^0.0.72",
+    "use-resize-observer": "^6.1.0",
     "vis-network-react": "1.2.3"
   },
   "devDependencies": {
