--- a/.flowconfig
+++ b/.flowconfig
@@ -26,5 +26,6 @@ module.name_mapper='@utils' -> '<PROJECT_ROOT>/src/utils/index.js'
 module.name_mapper='@storybookHelpers' -> '<PROJECT_ROOT>/.storybook/helpers.js'
 module.name_mapper='@slices' -> '<PROJECT_ROOT>/src/state/slices/index.js'
 module.name_mapper='state' -> '<PROJECT_ROOT>/src/state/index.js'
+module.name_mapper='@selectors' -> '<PROJECT_ROOT>/src/state/selectors/index.js'
 
 [strict]
