--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.set": "^4.3.2",
     "lodash.throttle": "^4.1.1",
+    "moment": "^2.27.0",
     "object.fromentries": "^2.0.2",
     "pretty-ms": "^7.0.0",
     "react": "^16.13.1",
@@ -37,18 +38,16 @@
     "typeface-rajdhani": "^0.0.72",
     "typeface-roboto": "^0.0.75",
     "use-resize-observer": "^6.1.0",
-    "vis-network-react": "^1.3.3"
+    "vis-network-react": "1.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
+    "flow": "flow",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "babelMacros": {
     "twin": {
@@ -86,6 +85,11 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^5.3.19",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
